--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Kinetic HTML Template</title>
+        <title>Tech IT Support</title>
 <!--
 
 Template 2090 Kinetic
@@ -43,20 +43,33 @@ http://www.tooplate.com/view/2090-kinetic
                    <a href="#t3"><li class="icon fa fa-image" id="tres"></li></a>
                    <a href="#t4"><li class="icon fa fa-phone" id="cuatro"></li></a>
                  </ul>
+
+                 <!-- Pagina 1 (principal) -->
+
                   <div class="page" id="p1">
-                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Kinetic</h4><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius neque non imperdiet auctor. Duis sit amet velit eu lorem sollicitudin sodales.</p><div class="primary-button"><a href="#t2">Discover More</a></div></li>   
+                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Tech IT</h4><p>Reparación, actualización y mantenimiento a computadoras y laptops.</p><div class="primary-button"><a href="#t2">Acerca de nosotros</a></div></li>
                   </div>
+
+                  <!-- Pagina 2 (acerca de) -->
+
                   <div class="page" id="p2">
-                    <li class="icon fa fa-user"><span class="title">About Us</span>
+                    <li class="icon fa fa-user"><span class="title">Acerca de</span>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
                           <div class="left-text">
-                            <h4>We are Kinetic</h4>
-                            <p>This kinetic HTML template is provided by Tooplate for free of charge. You may use this layout for your website. Please tell your friends about Tooplate. Thank you.<br><br>Cras suscipit, sem vel cursus iaculis, nibh augue placerat enim, in varius dolor turpis at augue. Nulla facilisi. In quis sem pellentesque, tristique ligula non, tincidunt ipsum. Curabitur porttitor, justo id egestas egestas, enim augue lacinia quam, et volutpat velit augue sodales velit.</p>
+
+                            <h4>Tech IT</h4>
+                            <p>Hola, !que tal¡</p>
+                            <p>Somos un equipo de Tecnicos y estudiantes de Ingenieria llamado "TechIT", que se dedica a brindar servicios de informatica, tales como:</p>
+                                <p> • Desarrollo de software.</p>
+                                <p> • Reparación, actualización y mantenimiento a equipos de cómputo.</p>
+                            <p>5 años y contando, de experiencia nos respaldan.</p>
+
                             <div class="primary-button">
                               <a href="#t3">Discover More</a>
                             </div>
+
                           </div>
                         </div>
                         <div class="col-md-6">
@@ -68,8 +81,11 @@ http://www.tooplate.com/view/2090-kinetic
                     </div>
                     </li>
                   </div>  
+
+                  <!-- Pagina 3 (imagenes) -->
+                  
                   <div class="page" id="p3">
-                    <li class="icon fa fa-image"><span class="title">Our Gallery</span>
+                    <li class="icon fa fa-image"><span class="title">Nuestro trabajo</span>
                       <div class="container">
                         <div class="row">
                           <div class="col-md-3 col-md-offset-1">
@@ -106,6 +122,7 @@ http://www.tooplate.com/view/2090-kinetic
                       </div>
                     </li>
                   </div>
+
                   <div class="page" id="p4">
                    <li class="icon fa fa-phone"><span class="title">Contact Us</span>
                     <div class="container">
@@ -137,9 +154,7 @@ http://www.tooplate.com/view/2090-kinetic
                          <div class="col-md-6">
                            <div class="right-info">
                               <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper idermate velit id, vestibulum auc sapien. Sed quis mauris eget semps imperdiet rhoncus.<br><br>
-                              <em>120-360 Etiam mauris erat,<br>
-								Vestibulum eu augue nec, 10110<br>
-								Nam consequat<br></em></p>
+                              <em>120-360 Etiam mauris erat,<br>Vestibulum eu augue nec, 10110<br>Nam consequat<br></em></p>
                               <ol class="social-icons">
                                 <i><a href="#"><i class="fa fa-facebook"></i></a></i>
                                 <i><a href="#"><i class="fa fa-twitter"></i></a></i>
@@ -153,7 +168,8 @@ http://www.tooplate.com/view/2090-kinetic
                     </div>
                    </li>
                   </div>  
-                  <p class="credit">Copyright &copy; 2017 Company Name 
+
+                  <p class="credit">Copyright &copy; 2017 Tech IT 
                         
                         - Design: <a href="http://www.tooplate.com/view/2090-kinetic" target="_parent">Kinetic</a></p>
                 </section>
