--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ http://www.tooplate.com/view/2090-kinetic
                  <!-- Pagina 1 (principal) -->
 
                   <div class="page" id="p1">
-                     <li class="icon fa fa-home"><span class="title">Welcome To</span><h4>Tech IT</h4><p>Reparación, actualización y mantenimiento a computadoras y laptops.</p><div class="primary-button"><a href="#t2">Acerca de nosotros</a></div></li>
+                     <li class="icon fa fa-home"><span class="title"></span><h4>Tech IT</h4><p>Reparación, actualización y mantenimiento a computadoras y laptops.</p><div class="primary-button"><a href="#t2">Acerca de nosotros</a></div></li>
                   </div>
 
                   <!-- Pagina 2 (acerca de) -->
