--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ http://www.tooplate.com/view/2090-kinetic
                             <p>5 años y contando, de experiencia nos respaldan.</p>
 
                             <div class="primary-button">
-                              <a href="#t3">Discover More</a>
+                              <a href="#t3">Nuestro trabajo</a>
                             </div>
 
                           </div>
@@ -123,8 +123,10 @@ http://www.tooplate.com/view/2090-kinetic
                     </li>
                   </div>
 
+                  <!-- Pagina 4 (contacto) -->>
+
                   <div class="page" id="p4">
-                   <li class="icon fa fa-phone"><span class="title">Contact Us</span>
+                   <li class="icon fa fa-phone"><span class="title">Contactanos</span>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
@@ -154,7 +156,7 @@ http://www.tooplate.com/view/2090-kinetic
                          <div class="col-md-6">
                            <div class="right-info">
                               <p>Lorem ipsum dolor , consectetur adipiscing elit. Nunc purus ligula, ullamcorper idermate velit id, vestibulum auc sapien. Sed quis mauris eget semps imperdiet rhoncus.<br><br>
-                              <em>120-360 Etiam mauris erat,<br>Vestibulum eu augue nec, 10110<br>Nam consequat<br></em></p>
+                              <em>Camino al sol,<br>Loma San Pedro #56384<br>Chicolopan, MEX.<br></em></p>
                               <ol class="social-icons">
                                 <i><a href="#"><i class="fa fa-facebook"></i></a></i>
                                 <i><a href="#"><i class="fa fa-twitter"></i></a></i>
